Fix CSS horizontal scroll on forms.

--- a/src/CSS/sales_order.css
+++ b/src/CSS/sales_order.css
@@ -1,7 +1,3 @@
-div#tabSaleOrder > div.form-row {
-    margin-right: 0px;
-}
-
 div#buttomSaleOrderForm {
     position: absolute;
     bottom: 10px;
